dynamic content JS

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,6 +1,7 @@
 ---
 import astroLogo from "../assets/astro.svg";
 import background from "../assets/background.svg";
+const pageTitle = "Home Page";
 ---
 
 <a href="/">Home</a>
