--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/global.css";
+import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
+
 const pageTitle = "About Me";
 const identity = {
   firstName: "Sarah",
@@ -38,9 +42,7 @@ const textCase = "upperCase";
     </style>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
     <h1>My Astro Site</h1>
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
@@ -86,5 +88,6 @@ const textCase = "upperCase";
         <p>My goal is not 3 days.</p>
       )
     }
+    <Footer />
   </body>
 </html>
