--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,6 +4,7 @@ import BlogPost from "../components/BlogPost.astro";
 const allPosts = Object.values(
   import.meta.glob("./posts/*.md", { eager: true })
 );
+console.log(allPosts);
 const pageTitle = "My Astro Learning Blog";
 ---
 
